--- a/frontend/spotify-app-recomendation/styles/Home.module.css
+++ b/frontend/spotify-app-recomendation/styles/Home.module.css
@@ -3,7 +3,6 @@
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   height: 100vh;
 }
@@ -13,39 +12,27 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.main h1{
+  color: #eaeaea;
+  margin-top: 20px;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.main h3{
+  color: #eaeaea;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.main p{
+  color: #eaeaea;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.lista{
+  margin-top: 100px;
 }
 
 .title {
-  margin: 0;
   line-height: 1.15;
   font-size: 4rem;
 }
@@ -60,16 +47,7 @@
   font-size: 1.5rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.form {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -78,16 +56,47 @@
   margin-top: 3rem;
 }
 
+.form button{
+  margin-left: 20px;
+  font-weight: bold;
+  color: #eaeaea;
+  padding: 5px 10px 5px 10px;
+  background-color: #0070f3;
+  border: none;
+  border-radius: 3px;
+}
+
+
 .card {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(49, 68, 49);
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 3px solid #142018;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+  width: 400px;
+}
+
+.imagem{
+  flex: 1;
+}
+
+.info{
+  flex: 2;
+}
+
+.info div{
+  color: #bebebe;
+  flex: 1;
+}
+
+.info div p{
+  font-size: small;
 }
 
 .card:hover,
@@ -114,7 +123,7 @@
 }
 
 @media (max-width: 600px) {
-  .grid {
+  .form {
     width: 100%;
     flex-direction: column;
   }
